Fix word-wrapping for Ocular Status in forums (#4264)
* Add a class to the ocular status in the forums

* Add word-wrap for ocular status in forums

* Add `overflow-wrap` to `postleft`

* Remove the classname for ocular-status

--- a/addons/scratchr2/forums.css
+++ b/addons/scratchr2/forums.css
@@ -248,6 +248,7 @@ body > #pagewrapper {
 }
 .postleft,
 .postfootleft {
+  overflow-wrap: break-word;
   overflow: visible;
   background-color: var(--darkWww-gray, #f2f2f2);
   color: var(--darkWww-gray-text, #575e75);
